[package]
name = "alignas"
version = "0.1.0"
authors = ["Kaz Wesley <kaz@lambdaverse.org>"]
license = "MIT/Apache-2.0"
description = "Wrapper to specify object alignment generically"
keywords = ["memory-management", "cryptography", "embedded", "no-std", "rust-patterns"]
categories = ["memory-management"]
repository = "https://github.com/kazcw/alignas"

[dependencies]
